Fix: Resolve flicker when changing themes

--- a/_sass/bogamie-blog/_base.scss
+++ b/_sass/bogamie-blog/_base.scss
@@ -25,15 +25,6 @@
   --text-primary-600: #8b8b8b;
 
   --md-block-color: #c2d1e4;
-
-  --base-color: #f2f2f2;
-  --base-variant: #f2f2f2;
-  --base-bright: #ffffff;
-  --text-color: #111528;
-  --secondary-text: #232728;
-  --third-text: #ffffff;
-  --primary-color: #3a435d;
-  --accent-color: #0071ff;
 }
 
 .darkmode {
@@ -54,15 +45,6 @@
   --text-primary-600: #606060;
 
   --md-block-color: #adbac7;
-
-  --base-color: #121212;
-  --base-variant: #8f4444;
-  --base-bright: #282828;
-  --text-color: #42833b;
-  --secondary-text: #2c385b;
-  --third-text: #511cff;
-  --primary-color: #ff05e6;
-  --accent-color: #0071ff;
 }
 
 
